--- a/style.css
+++ b/style.css
@@ -1,4 +1,44 @@
-*{
-    margin :0;
+* {
+    margin: 0;
     padding: 0;
+}
+body {
+    background-image: url(imagem/particula-de-tecnologia-abstrata-realista-de-fundo_23-2148431735.webp);
+
+    }
+
+.foto {
+    border-radius: 50%; /*quando no css eu tenho um ponto eu estou customizando uma classe*/
+    margin: 32px 0;
+    max-width: 256px;
+    width: 40%;
+}
+
+.botao-diferente{
+    color: red;
+    border: 1px solid red;
+
+}
+.botao-diferente:hover{
+    color: blue;
+    border: 1px dashed blue; /*estou falando a grossura, estilo, e a cor da borda */
+
+}
+
+button {
+    color: blue;
+    padding: 16px;
+    border: none;
+    border-radius: 8px;
+    margin: 16px auto;
+    cursor: pointer; 
+}
+
+.content{
+    justify-content: center;
+}
+
+.box{
+    width: 50%;
+    margin: 0 auto;
 }
